// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> debe de mostrar a Batman y el input con el valor del queryString 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-md-5"
    >
      <h1>
        Search Screen
      </h1>
      <hr />
      <form
        autoComplete="off"
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="inpControl"
          >
            Search:
          </label>
          <input
            className="form-control"
            id="inpControl"
            name="searchText"
            onChange={[Function]}
            placeholder="Search heroes"
            type="text"
            value="Spider Man"
          />
        </div>
        <button
          className="btn btn-outline-info btn-block btn-lg"
          disabled={false}
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-md-7"
    >
      <h2
        style={
          Object {
            "fontSize": "2.5rem",
          }
        }
      >
        Result
      </h2>
      <hr />
      <div
        className="card ms-3"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row no-gutters"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Spider Man"
              className="card-img"
              src="./assets/images/marvel-spider.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Spider Man
              </h5>
              <p
                className="card-text"
              >
                Peter Parker
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                   
                  Amazing Fantasy #15
                   
                </small>
              </p>
              <a
                href="/hero/marvel-spider"
                onClick={[Function]}
              >
                ...Más
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> debe de mostrar un error si no se encuentra el Hero 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-md-5"
    >
      <h1>
        Search Screen
      </h1>
      <hr />
      <form
        autoComplete="off"
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="inpControl"
          >
            Search:
          </label>
          <input
            className="form-control"
            id="inpControl"
            name="searchText"
            onChange={[Function]}
            placeholder="Search heroes"
            type="text"
            value="Spider Mannn"
          />
        </div>
        <button
          className="btn btn-outline-info btn-block btn-lg"
          disabled={false}
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-md-7"
    >
      <h2
        style={
          Object {
            "fontSize": "2.5rem",
          }
        }
      >
        Result
      </h2>
      <hr />
      <div
        className="fade mt-5 alert alert-danger show"
        role="alert"
      >
        There is no a hero with 
        Spider Mannn
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> debe de mostrarse correctamente con valores por defecto 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-md-5"
    >
      <h1>
        Search Screen
      </h1>
      <hr />
      <form
        autoComplete="off"
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="inpControl"
          >
            Search:
          </label>
          <input
            className="form-control"
            id="inpControl"
            name="searchText"
            onChange={[Function]}
            placeholder="Search heroes"
            type="text"
            value=""
          />
        </div>
        <button
          className="btn btn-outline-info btn-block btn-lg"
          disabled={false}
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-md-7"
    >
      <h2
        style={
          Object {
            "fontSize": "2.5rem",
          }
        }
      >
        Result
      </h2>
      <hr />
      <div
        className="fade mt-5 alert alert-info show"
        role="alert"
      >
        Search a hero
      </div>
    </div>
  </div>
</div>
`;
